--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,7 +16,7 @@
     <!-- Navbar -->
     <header class="font-poppins font-medium text-lg sticky top-0">
         <nav class="bg-primary shadow-lg flex justify-between items-center mx-auto px-8 md:px-14 py-6 lg:px-24 w-full">
-            <div class="text-3xl font-bold text-white"><a href="#">Joshua Ezekiel</a></div>
+            <div class="text-3xl font-bold text-white"><a href="#">The Josh</a></div>
                 <div class="hidden md:flex space-x-12 items-center text-white ">
                     <a href="#about">About</a>       
                     <a href="#projects">Projects</a>
@@ -103,7 +103,7 @@
         <!-- Project One -->
         <div class="container pt-24 md:pt-26 mx-auto flex flex-wrap flex-col md:flex-row items-center">
             <!-- Left column -->
-            <div class="flex flex-col w-full p-4 xl:w-1/2 justify-center lg:items-start overflow-y-hidden">
+            <div class="flex flex-col w-full p-4 xl:w-[40%] justify-center lg:items-start overflow-y-hidden">
                 <h1 class="font-semibold font-poppins text-4xl text-white md:text-2xl lg:text-5xl text-left md:text-left ">Projects</h1>
                 <h1 class="font-semibold font-poppins text-xl text-white md:text-xl lg:text-3xl text-left md:text-left mt-12 underline decoration-slate-500">Teaching Hospital Department Website</h1>
                     <p class="main-font font-semibold font-montserrat text-xl mt-16">Approach</p>
@@ -125,7 +125,7 @@
                 </div>
             </div>
             <!-- Right column -->
-            <div class="w-full xl:w-1/2 p-12 overflow-hidden md:pt-1">
+            <div class="w-full xl:w-[60%] p-12 overflow-hidden md:pt-1">
                 <video 
                     src="https://res.cloudinary.com/thejm/video/upload/v1737310419/devPortfolio/NuclearMed-Site.mp4" 
                     class="rounded-3xl text-white"
@@ -138,7 +138,7 @@
                 </video>
                 <div class="flex items-center mt-10 justify-center">
                     <div>
-                        <!-- scrolls to the second project -->
+                        <!-- scrolls to the next project -->
                         <a href="#project-two"> 
                             <button class="p-3 rounded-xl text-white font-bold font-poppins border-solid border-2 border-[#F62BA5] hover:bg-slate-800"> 
                                 <span class="text-white text-sm font-montserrat font-thin">Next</span>
@@ -156,20 +156,20 @@
             <!-- Project Two -->
         <div class="container pt-24 md:pt-26 mx-auto flex flex-wrap flex-col md:flex-row items-center " id="project-two">
             <!-- Left column -->
-            <div class="flex flex-col w-full p-4 xl:w-1/2 justify-center lg:items-start overflow-y-hidden">
-                <h1 class="font-semibold font-poppins text-xl text-white md:text-xl lg:text-3xl text-left md:text-left mt-5 underline decoration-slate-500">Project Name No. 2</h1>
+            <div class="flex flex-col w-full p-4 xl:w-[40%] justify-center lg:items-start overflow-y-hidden">
+                <h1 class="font-semibold font-poppins text-xl text-white md:text-xl lg:text-3xl text-left md:text-left mt-5 underline decoration-slate-500">Url Shortener Web Application</h1>
                     <p class="main-font font-semibold font-montserrat text-xl mt-16 ">Approach</p>
-                    <p class="font-thin font-montserra text-white mt-8 text-2xl md:text-2xl lg:text-2xl text-left md:text-left">The project utilizes SvelteKit to build a modern, responsive web application focused on performance and user experience. Server-side rendering (SSR) capabilities are leveraged to deliver fast initial load times and improve SEO. Routing and layout management was used to facilitate a clear and maintainable structure. Component-based architecture is employed to ensure reusability and modularity, making it easier to scale and maintain the application.</p>
-                    <p class="font-thin font-montserra text-white mt-8 text-2xl md:text-2xl lg:text-2xl text-left md:text-left">Vite was used for fast builds and hot module replacement, enhancing the development experience. Deployment is streamlined using continuos integration and continuos development (CICD) pipeline with github and cloud host platform (Netlify), enabling always live site, continuous deployment and easy scalability.</p>
+                    <p class="font-thin font-montserra text-white mt-8 text-2xl md:text-2xl lg:text-2xl text-left md:text-left">This project uses flask (a python web framework) to build a full-featured URL shortener web application. The application can create short link from a provided long url and monitor the created link for interaction, logging different data on the short link interactions. It incorporates user authentication and secure database storage with mySQL using SQLAlchemy and bcrypt for password hashing before storage.</p>
+                    <p class="font-thin font-montserra text-white mt-8 text-2xl md:text-2xl lg:text-2xl text-left md:text-left">On the live version pure HTML and CSS are used and on the open-sourced version, Tailwind CSS is used. </p>
                     <p class="main-font font-semibold font-montserrat text-xl mt-16">Tech Stack</p>
-                    <p class="font-thin font-montserra text-white mt-8 text-2xl md:text-2xl lg:text-2xl text-left md:text-left">SvelteKit &nbsp TailwindCSS &nbsp Vite</p>
+                    <p class="font-thin font-montserra text-white mt-8 text-2xl md:text-2xl lg:text-2xl text-left md:text-left">Python &nbsp Flask &nbsp mySQL</p>
                 <div class="flex space-x-8 my-2 md:items-center justify-center mb-16">
-                    <a href="html/index.html" target="_blank" rel="noopener noreferrer">
+                    <a href="http://s-turl.com/lvusp" target="_blank" rel="noopener noreferrer">
                         <button class="px-8 py-3 rounded-xl text-white font-bold font-poppins mt-16 flex items-center space-x-3 border-solid border-2 border-white text-xl sm:w-auto hover:border-2 hover:bg-slate-800"> 
                             <span>Live Demo</span>
                         </button>
                     </a>
-                    <a href="html/index.html" target="_blank" rel="noopener noreferrer">
+                    <a href="http://s-turl.com/ghusp" target="_blank" rel="noopener noreferrer">
                         <button class="px-8 py-4 bg-button rounded-xl text-white font-bold font-poppins mt-16 flex items-center text-xl w-full sm:w-auto hover:border-2 hover:bg-slate-800"> 
                             <span class="">Source Code</span>
                         </button>
@@ -177,7 +177,7 @@
                 </div>
             </div>
             <!-- Right column -->
-            <div class="w-full xl:w-1/2 p-12 overflow-hidden md:pt-1">
+            <div class="w-full xl:w-[60%] p-12 overflow-hidden md:pt-1">
                 <video 
                     src="https://res.cloudinary.com/thejm/video/upload/v1737310412/devPortfolio/Url-Shortener-Site.mp4" 
                     class="rounded-3xl text-white"
@@ -189,7 +189,111 @@
                     Your browser does not support the video tag.
                 </video>
                     <div class="flex items-center mt-10 justify-center">
-                    <div>
+                        <div>
+                            <!-- scrolls to the next project -->
+                            <a href="#project-three"> 
+                                <button class="p-3 rounded-xl text-white font-bold font-poppins border-solid border-2 border-[#F62BA5] hover:bg-slate-800"> 
+                                    <span class="text-white text-sm font-montserrat font-thin">Next</span>
+                                </button>
+                            </a>
+                            <div class="mx-5 mt-2">
+                                <span class="m_scroll_arrows one"></span>
+                                <span class="m_scroll_arrows two"></span>
+                                <span class="m_scroll_arrows three"></span>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+        </div>
+        <!-- Project Three -->
+        <div class="container pt-24 md:pt-26 mx-auto flex flex-wrap flex-col md:flex-row items-center " id="project-three">
+            <!-- Left column -->
+            <div class="flex flex-col w-full p-4 xl:w-[40%] justify-center lg:items-start overflow-y-hidden">
+                <h1 class="font-semibold font-poppins text-xl text-white md:text-xl lg:text-3xl text-left md:text-left mt-5 underline decoration-slate-500">Live Tutoring and Learning Platform</h1>
+                    <p class="main-font font-semibold font-montserrat text-xl mt-16 ">Approach</p>
+                    <p class="font-thin font-montserra text-white mt-8 text-2xl md:text-2xl lg:text-2xl text-left md:text-left">The project utilizes SvelteKit to build a modern, responsive web interactive learning application focused on performance and user experience. Server-side rendering (SSR) capabilities are leveraged to deliver fast initial load times and improve SEO. Routing and layout management was used to facilitate a clear and maintainable structure. Component-based architecture is employed to ensure reusability and modularity, making it easier to scale and maintain the application.</p>
+                    <p class="font-thin font-montserra text-white mt-8 text-2xl md:text-2xl lg:text-2xl text-left md:text-left">On the backend, Laravel, a PHP web framework was used to build the API that serves the data from the database which is powered by PostgreSQL. Deployment is streamlined using continuos integration and continuos development (CICD) pipeline with github actions, enabling always live site, continuous deployment and easy scalability.</p>
+                    <p class="main-font font-semibold font-montserrat text-xl mt-16">Tech Stack</p>
+                    <p class="font-thin font-montserra text-white mt-8 text-2xl md:text-2xl lg:text-2xl text-left md:text-left">SvelteKit &nbsp Laravel &nbsp Github Actions</p>
+                <div class="flex space-x-8 my-2 md:items-center justify-center mb-16">
+                    <a href="http://s-turl.com/lvtlp" target="_blank" rel="noopener noreferrer">
+                        <button class="px-8 py-3 rounded-xl text-white font-bold font-poppins mt-16 flex items-center space-x-3 border-solid border-2 border-white text-xl sm:w-auto hover:border-2 hover:bg-slate-800"> 
+                            <span>Live Demo</span>
+                        </button>
+                    </a>
+                    <a href="http://s-turl.com/ghtlp" target="_blank" rel="noopener noreferrer">
+                        <button class="px-8 py-4 bg-button rounded-xl text-white font-bold font-poppins mt-16 flex items-center text-xl w-full sm:w-auto hover:border-2 hover:bg-slate-800"> 
+                            <span class="">Source Code</span>
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <!-- Right column -->
+            <div class="w-full xl:w-[60%] p-12 overflow-hidden md:pt-1">
+                <video 
+                    src="https://res.cloudinary.com/thejm/video/upload/v1737310428/devPortfolio/UtopLrn-Site.mp4" 
+                    class="rounded-3xl text-white"
+                    autoplay
+                    loop
+                    muted
+                    playsinline
+                    >
+                    Your browser does not support the video tag.
+                </video>
+                    <div class="flex items-center mt-10 justify-center">
+                     <div>
+                        <!-- scrolls to the next project -->
+                        <a href="#project-four"> 
+                            <button class="p-3 rounded-xl text-white font-bold font-poppins border-solid border-2 border-[#F62BA5] hover:bg-slate-800"> 
+                                <span class="text-white text-sm font-montserrat font-thin">Next</span>
+                            </button>
+                        </a>
+                        <div class="mx-5 mt-2">
+                            <span class="m_scroll_arrows one"></span>
+                            <span class="m_scroll_arrows two"></span>
+                            <span class="m_scroll_arrows three"></span>
+                        </div>
+                    </div>
+                    </div>
+            </div>
+        </div>
+        <!-- Project Four -->
+        <div class="container pt-24 md:pt-26 mx-auto flex flex-wrap flex-col md:flex-row items-center " id="project-four">
+            <!-- Left column -->
+            <div class="flex flex-col w-full p-4 xl:w-[40%] justify-center lg:items-start overflow-y-hidden">
+                <h1 class="font-semibold font-poppins text-xl text-white md:text-xl lg:text-3xl text-left md:text-left mt-5 underline decoration-slate-500">Electronic Pharmacy and Medicine Delivery Website</h1>
+                    <p class="main-font font-semibold font-montserrat text-xl mt-16 ">Approach</p>
+                    <p class="font-thin font-montserra text-white mt-8 text-2xl md:text-2xl lg:text-2xl text-left md:text-left">This project is built with plain HTML, bootstrap css and JQuery. A third party service was integrated for the live chat feature.</p>
+                    <p class="font-thin font-montserra text-white mt-8 text-2xl md:text-2xl lg:text-2xl text-left md:text-left">Github Actions was used for continuous integration and deployment.</p>
+                    <p class="main-font font-semibold font-montserrat text-xl mt-16">Tech Stack</p>
+                    <p class="font-thin font-montserra text-white mt-8 text-2xl md:text-2xl lg:text-2xl text-left md:text-left">HTML &nbsp BootstrapCSS &nbsp JQuery</p>
+                <div class="flex space-x-8 my-2 md:items-center justify-center mb-16">
+                    <a href="http://s-turl.com/lvphm" target="_blank" rel="noopener noreferrer">
+                        <button class="px-8 py-3 rounded-xl text-white font-bold font-poppins mt-16 flex items-center space-x-3 border-solid border-2 border-white text-xl sm:w-auto hover:border-2 hover:bg-slate-800"> 
+                            <span>Live Demo</span>
+                        </button>
+                    </a>
+                    <a href="/source-code.html" target="_blank" rel="noopener noreferrer">
+                        <button class="px-8 py-4 bg-button rounded-xl text-white font-bold font-poppins mt-16 flex items-center text-xl w-full sm:w-auto hover:border-2 hover:bg-slate-800"> 
+                            <span class="">Source Code</span>
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <!-- Right column -->
+            <div class="w-full xl:w-[60%] p-12 overflow-hidden md:pt-1">
+                <video 
+                    src="https://res.cloudinary.com/thejm/video/upload/v1737310367/devPortfolio/epharmacy-site.mp4" 
+                    class="rounded-3xl text-white"
+                    autoplay
+                    loop
+                    muted
+                    playsinline
+                    >
+                    Your browser does not support the video tag.
+                </video>
+                    <div class="flex items-center mt-10 justify-center">
+                    <div class="hidden">
                         <button class="p-3 rounded-xl text-white font-bold font-poppins border-solid border-2 border-[#F62BA5] hover:bg-slate-800"> 
                             <span class="text-white text-sm font-montserrat font-thin">Next</span>
                         </button>
@@ -280,11 +384,11 @@
                 <form class="w-full">
                     <div class="mb-6 mt-20">
                         <label for="name" class="block mb-2 font-bold text-lg font-poppins main-font">Full Name</label>
-                        <input type="name" id="email" class="bg-primary text-gray-900 text-sm rounded-lg block w-full p-5 dark:text-white focus:outline-none focus:ring focus:border-main-font" required>
+                        <input type="name" id="name" class="bg-primary text-gray-900 text-sm rounded-lg block w-full p-5 dark:text-white focus:outline-none focus:ring focus:border-main-font" required>
                     </div>
                     <div class="mb-6">
                         <label for="email" class="block mb-2 text-lg font-bold font-poppins main-font">Email</label>
-                        <input type="email" id="password" class="bg-primary text-gray-900 text-sm rounded-lg  block w-full p-5  dark:text-white focus:outline-none focus:ring focus:border-main-font" placeholder="you@email.com" required>
+                        <input type="email" id="email" class="bg-primary text-gray-900 text-sm rounded-lg  block w-full p-5  dark:text-white focus:outline-none focus:ring focus:border-main-font" placeholder="you@email.com" required>
                     </div>
                     <div class="flex items-start mb-6">
                         <div class="container">
