Add contact form endpoint with form.taxi

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -103,8 +103,8 @@
         <!-- Project One -->
         <div class="container pt-24 md:pt-26 mx-auto flex flex-wrap flex-col md:flex-row items-center">
             <!-- Left column -->
-            <div class="flex flex-col w-full p-4 xl:w-[40%] justify-center lg:items-start overflow-y-hidden">
-                <h1 class="font-semibold font-poppins text-4xl text-white md:text-2xl lg:text-5xl text-left md:text-left ">Projects</h1>
+            <div class="flex flex-col w-full p-4 md:w-[60%] xl:w-[60%] justify-center lg:items-start overflow-y-hidden">
+                <h1 class="font-semibold font-poppins text-4xl text-white md:text-2xl lg:text-5xl text-left md:text-left">Projects</h1>
                 <h1 class="font-semibold font-poppins text-xl text-white md:text-xl lg:text-3xl text-left md:text-left mt-12 underline decoration-slate-500">Teaching Hospital Department Website</h1>
                     <p class="main-font font-semibold font-montserrat text-xl mt-16">Approach</p>
                     <p class="font-thin font-montserra text-white mt-8 text-2xl md:text-2xl lg:text-2xl text-left md:text-left">The project was built using server-side rendering (SSR) with nuxt.js metaframework. This enables fast load times and SEO-friendly pages. The layout, routing, and components were carefully planned to create a modular and scalable architecture. Focus was placed on responsive, user-friendly interfaces, ensuring seamless navigation and interactions.</p>
@@ -125,7 +125,7 @@
                 </div>
             </div>
             <!-- Right column -->
-            <div class="w-full xl:w-[60%] p-12 overflow-hidden md:pt-1">
+            <div class="w-full md:w-[40%] xl:w-[40%] p-12 overflow-hidden md:pt-1">
                 <video 
                     src="https://res.cloudinary.com/thejm/video/upload/v1737310419/devPortfolio/NuclearMed-Site.mp4" 
                     class="rounded-3xl text-white"
@@ -156,7 +156,7 @@
             <!-- Project Two -->
         <div class="container pt-24 md:pt-26 mx-auto flex flex-wrap flex-col md:flex-row items-center " id="project-two">
             <!-- Left column -->
-            <div class="flex flex-col w-full p-4 xl:w-[40%] justify-center lg:items-start overflow-y-hidden">
+            <div class="flex flex-col w-full p-4 md:w-[60%] xl:w-[60%] justify-center lg:items-start overflow-y-hidden">
                 <h1 class="font-semibold font-poppins text-xl text-white md:text-xl lg:text-3xl text-left md:text-left mt-5 underline decoration-slate-500">Url Shortener Web Application</h1>
                     <p class="main-font font-semibold font-montserrat text-xl mt-16 ">Approach</p>
                     <p class="font-thin font-montserra text-white mt-8 text-2xl md:text-2xl lg:text-2xl text-left md:text-left">This project uses flask (a python web framework) to build a full-featured URL shortener web application. The application can create short link from a provided long url and monitor the created link for interaction, logging different data on the short link interactions. It incorporates user authentication and secure database storage with mySQL using SQLAlchemy and bcrypt for password hashing before storage.</p>
@@ -166,18 +166,18 @@
                 <div class="flex space-x-8 my-2 md:items-center justify-center mb-16">
                     <a href="http://s-turl.com/lvusp" target="_blank" rel="noopener noreferrer">
                         <button class="px-8 py-3 rounded-xl text-white font-bold font-poppins mt-16 flex items-center space-x-3 border-solid border-2 border-white text-xl sm:w-auto hover:border-2 hover:bg-slate-800"> 
-                            <span>Live Demo</span>
+                            Live Demo
                         </button>
                     </a>
                     <a href="http://s-turl.com/ghusp" target="_blank" rel="noopener noreferrer">
                         <button class="px-8 py-4 bg-button rounded-xl text-white font-bold font-poppins mt-16 flex items-center text-xl w-full sm:w-auto hover:border-2 hover:bg-slate-800"> 
-                            <span class="">Source Code</span>
+                            Source Code
                         </button>
                     </a>
                 </div>
             </div>
             <!-- Right column -->
-            <div class="w-full xl:w-[60%] p-12 overflow-hidden md:pt-1">
+            <div class="w-full md:w-[40%] xl:w-[40%] p-12 overflow-hidden md:pt-1">
                 <video 
                     src="https://res.cloudinary.com/thejm/video/upload/v1737310412/devPortfolio/Url-Shortener-Site.mp4" 
                     class="rounded-3xl text-white"
@@ -208,7 +208,7 @@
         <!-- Project Three -->
         <div class="container pt-24 md:pt-26 mx-auto flex flex-wrap flex-col md:flex-row items-center " id="project-three">
             <!-- Left column -->
-            <div class="flex flex-col w-full p-4 xl:w-[40%] justify-center lg:items-start overflow-y-hidden">
+            <div class="flex flex-col w-full p-4 md:w-[60%] xl:w-[60%] justify-center lg:items-start overflow-y-hidden">
                 <h1 class="font-semibold font-poppins text-xl text-white md:text-xl lg:text-3xl text-left md:text-left mt-5 underline decoration-slate-500">Live Tutoring and Learning Platform</h1>
                     <p class="main-font font-semibold font-montserrat text-xl mt-16 ">Approach</p>
                     <p class="font-thin font-montserra text-white mt-8 text-2xl md:text-2xl lg:text-2xl text-left md:text-left">The project utilizes SvelteKit to build a modern, responsive web interactive learning application focused on performance and user experience. Server-side rendering (SSR) capabilities are leveraged to deliver fast initial load times and improve SEO. Routing and layout management was used to facilitate a clear and maintainable structure. Component-based architecture is employed to ensure reusability and modularity, making it easier to scale and maintain the application.</p>
@@ -218,18 +218,18 @@
                 <div class="flex space-x-8 my-2 md:items-center justify-center mb-16">
                     <a href="http://s-turl.com/lvtlp" target="_blank" rel="noopener noreferrer">
                         <button class="px-8 py-3 rounded-xl text-white font-bold font-poppins mt-16 flex items-center space-x-3 border-solid border-2 border-white text-xl sm:w-auto hover:border-2 hover:bg-slate-800"> 
-                            <span>Live Demo</span>
+                            Live Demo
                         </button>
                     </a>
                     <a href="http://s-turl.com/ghtlp" target="_blank" rel="noopener noreferrer">
                         <button class="px-8 py-4 bg-button rounded-xl text-white font-bold font-poppins mt-16 flex items-center text-xl w-full sm:w-auto hover:border-2 hover:bg-slate-800"> 
-                            <span class="">Source Code</span>
+                            Source Code
                         </button>
                     </a>
                 </div>
             </div>
             <!-- Right column -->
-            <div class="w-full xl:w-[60%] p-12 overflow-hidden md:pt-1">
+            <div class="w-full md:w-[40%] xl:w-[40%] p-12 overflow-hidden md:pt-1">
                 <video 
                     src="https://res.cloudinary.com/thejm/video/upload/v1737310428/devPortfolio/UtopLrn-Site.mp4" 
                     class="rounded-3xl text-white"
@@ -260,7 +260,7 @@
         <!-- Project Four -->
         <div class="container pt-24 md:pt-26 mx-auto flex flex-wrap flex-col md:flex-row items-center " id="project-four">
             <!-- Left column -->
-            <div class="flex flex-col w-full p-4 xl:w-[40%] justify-center lg:items-start overflow-y-hidden">
+            <div class="flex flex-col w-full p-4 md:w-[60%] xl:w-[60%] justify-center lg:items-start overflow-y-hidden">
                 <h1 class="font-semibold font-poppins text-xl text-white md:text-xl lg:text-3xl text-left md:text-left mt-5 underline decoration-slate-500">Electronic Pharmacy and Medicine Delivery Website</h1>
                     <p class="main-font font-semibold font-montserrat text-xl mt-16 ">Approach</p>
                     <p class="font-thin font-montserra text-white mt-8 text-2xl md:text-2xl lg:text-2xl text-left md:text-left">This project is built with plain HTML, bootstrap css and JQuery. A third party service was integrated for the live chat feature.</p>
@@ -270,18 +270,18 @@
                 <div class="flex space-x-8 my-2 md:items-center justify-center mb-16">
                     <a href="http://s-turl.com/lvphm" target="_blank" rel="noopener noreferrer">
                         <button class="px-8 py-3 rounded-xl text-white font-bold font-poppins mt-16 flex items-center space-x-3 border-solid border-2 border-white text-xl sm:w-auto hover:border-2 hover:bg-slate-800"> 
-                            <span>Live Demo</span>
+                            Live Demo
                         </button>
                     </a>
                     <a href="/source-code.html" target="_blank" rel="noopener noreferrer">
                         <button class="px-8 py-4 bg-button rounded-xl text-white font-bold font-poppins mt-16 flex items-center text-xl w-full sm:w-auto hover:border-2 hover:bg-slate-800"> 
-                            <span class="">Source Code</span>
+                            Source Code
                         </button>
                     </a>
                 </div>
             </div>
             <!-- Right column -->
-            <div class="w-full xl:w-[60%] p-12 overflow-hidden md:pt-1">
+            <div class="w-full md:w-[40%] xl:w-[40%] p-12 overflow-hidden md:pt-1">
                 <video 
                     src="https://res.cloudinary.com/thejm/video/upload/v1737310367/devPortfolio/epharmacy-site.mp4" 
                     class="rounded-3xl text-white"
@@ -358,7 +358,7 @@
                                 <img width="50" height="70" src="https://res.cloudinary.com/thejm/image/upload/v1670238824/devPortfolio/canva.svg"/>
                             </div>
                             <div>
-                                <img width="50" height="70" src="https://res.cloudinary.com/thejm/image/upload/v1670241880/devPortfolio/desygner.svg"/>
+                                <img width="50" height="70" src="https://res.cloudinary.com/thejm/image/upload/v1736399365/devPortfolio/desygner.svg"/>
                             </div>
                             <div>
                                 <img width="50" height="70" src="https://res.cloudinary.com/thejm/image/upload/v1670242029/devPortfolio/inkscape.svg"/>
@@ -381,19 +381,19 @@
         <div class="container pt-24 md:pt-26 mx-auto flex flex-wrap flex-col md:flex-row items-center">
             <div class="flex flex-col w-full xl:w-3/5 p-5 pb-24 justify-center lg:items-start overflow-y-hidden">
                 <h1 class="font-semibold font-poppins text-4xl text-white md:text-2xl lg:text-5xl text-left md:text-left ">Contact</h1>
-                <form class="w-full">
+                <form class="w-full" action="https://form.taxi/s/9elqlgkz" method="POST">
                     <div class="mb-6 mt-20">
                         <label for="name" class="block mb-2 font-bold text-lg font-poppins main-font">Full Name</label>
-                        <input type="name" id="name" class="bg-primary text-gray-900 text-sm rounded-lg block w-full p-5 dark:text-white focus:outline-none focus:ring focus:border-main-font" required>
+                        <input type="text" id="name" name="name" class="bg-primary text-gray-900 text-sm rounded-lg block w-full p-5 dark:text-white focus:outline-none focus:ring focus:border-main-font" required>
                     </div>
                     <div class="mb-6">
                         <label for="email" class="block mb-2 text-lg font-bold font-poppins main-font">Email</label>
-                        <input type="email" id="email" class="bg-primary text-gray-900 text-sm rounded-lg  block w-full p-5  dark:text-white focus:outline-none focus:ring focus:border-main-font" placeholder="you@email.com" required>
+                        <input type="email" id="email" name="email" class="bg-primary text-gray-900 text-sm rounded-lg  block w-full p-5  dark:text-white focus:outline-none focus:ring focus:border-main-font" placeholder="you@email.com" required>
                     </div>
                     <div class="flex items-start mb-6">
                         <div class="container">
                             <label for="message" class="block mb-2 text-lg font-bold font-poppins main-font">Message</label>
-                            <textarea id="message" rows="5" class=" block rounded-lg bg-primary dark:text-white w-full p-3 focus:outline-none focus:ring focus:border-main-font"></textarea>
+                            <textarea id="message" name="message" rows="5" class="block rounded-lg bg-primary dark:text-white w-full p-3 focus:outline-none focus:ring focus:border-main-font" required></textarea>
                         </div>
                     </div>
                         <button type="submit" class="text-white text-xl bg-button rounded-lg w-full sm:w-auto px-8 py-3 mt-8 bg-button text-center font-bold font-poppins hover:border-2 hover:bg-slate-800">Send</button>
